# sqlopt

./: .gitignore  final_query_results.csv  optimized_results.csv  optimized_vs_original.csv  pyproject.toml  query_metadata.csv  training_data.csv
conda/: environment.yml
data/: query_execution_data.json  query_metadata.csv  training_data.csv
docs/final_report/: final_report.tex  references.bib
docs/progress_report/: progress_report.tex  references.bib
docs/proposal/: proposal.tex  references.bib
postgres-tpch/: Dockerfile  docker-compose.yml  generate_tpch_data.sh
saved_models/: feature_based_xgb.joblib  query_based_rf.joblib  query_based_xgb.joblib
src/: analyze_feature_based.py  analyze_query_based.py  benchmark_queries.py  collect_data.py  feature_based_model.py  merge_queries.py  preprocess.py  query_based_model.py  semantic_optimizer.py
